--- a/index.html
+++ b/index.html
@@ -11,12 +11,27 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/style.css">
+        <script src="https://kit.fontawesome.com/620fc58eba.js" crossorigin="anonymous"></script>
     </head>
     <body>
+
+        <!---->
         <div id="intro">
-            <img src="./assets/images/logo.png" alt="logo" id="intro-logo">
+            <img src="./assets/images/Logo_site.png" alt="logo" id="intro-logo">
         </div>
-        <div class="main">MAIN</div>
+
+        <header class="global-header">
+            <div id="header-wrapper" class="">
+                <div class="left-panel"><i class="fa-solid fa-ellipsis-vertical fa-sm" style="color: #ffffff;"></i></div>
+                <div class="middle-panel"><img src="./assets/images/Logo_site_main.png" alt=""></div>
+                <div class="right-panel"></div>
+            </div>
+        </header>
+        <main>
+            <div id="bg"></div>
+        </main>
+
+
 
         <script src="./js/intro.js"></script>
     </body>
