--- a/index.html
+++ b/index.html
@@ -4,35 +4,129 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>La truite</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./css/style.css">
-        <script src="https://kit.fontawesome.com/620fc58eba.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
 
-        <!---->
-        <div id="intro">
-            <img src="./assets/images/Logo_site.png" alt="logo" id="intro-logo">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>La truite</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/620fc58eba.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+
+    <!---->
+    <div id="intro">
+        <img src="./assets/images/Logo_site.png" alt="logo" id="intro-logo">
+    </div>
+
+    <header class="global-header">
+        <div id="header-wrapper" class="">
+            <div class="left-panel"><i class="fa-solid fa-ellipsis-vertical fa-sm" style="color: #ffffff;"></i></div>
+            <div class="middle-panel"><img src="./assets/images/Logo_site_main.png" alt=""></div>
+            <div class="right-panel"></div>
+        </div>
+    </header>
+    <main>
+        <div id="bg">
+            <h1>"le début d'une nouvelle ère"</h1>
+        </div>
+        <div id="sections">
+            <div class="text-presentation">
+                <p>Et hanc quidem praeter oppida multa duae civitates exornant Seleucia opus Seleuci regis, et
+                    Claudiopolis quam deduxit coloniam Claudius Caesar. Isaura enim antehac nimium potens, olim subversa
+                    ut rebellatrix interneciva aegre vestigia claritudinis pristinae monstrat admodum pauca.
+
+                    Sin autem ad adulescentiam perduxissent, dirimi tamen interdum contentione vel uxoriae condicionis
+                    vel commodi alicuius, quod idem adipisci uterque non posset. Quod si qui longius in amicitia
+                    provecti essent, tamen saepe labefactari, si in honoris contentionem incidissent; pestem enim nullam
+                    maiorem esse amicitiis quam in plerisque pecuniae cupiditatem, in optimis quibusque honoris certamen
+                    et gloriae; ex quo inimicitias maximas saepe inter amicissimos exstitisse.
+
+                    Et licet quocumque oculos flexeris feminas adfatim multas spectare cirratas, quibus, si nupsissent,
+                    per aetatem ter iam nixus poterat suppetere liberorum, ad usque taedium pedibus pavimenta tergentes
+                    iactari volucriter gyris, dum exprimunt innumera simulacra, quae finxere fabulae theatrales.
+
+                    Soleo saepe ante oculos ponere, idque libenter crebris usurpare sermonibus, omnis nostrorum
+                    imperatorum, omnis exterarum gentium potentissimorumque populorum, omnis clarissimorum regum res
+                    gestas, cum tuis nec contentionum magnitudine nec numero proeliorum nec varietate regionum nec
+                    celeritate conficiendi nec dissimilitudine bellorum posse conferri; nec vero disiunctissimas terras
+                    citius passibus cuiusquam potuisse peragrari, quam tuis non dicam cursibus, sed victoriis lustratae
+                    sunt.
+
+                    Et hanc quidem praeter oppida multa duae civitates exornant Seleucia opus Seleuci regis, et
+                    Claudiopolis quam deduxit coloniam Claudius Caesar. Isaura enim antehac nimium potens, olim subversa
+                    ut rebellatrix interneciva aegre vestigia claritudinis pristinae monstrat admodum pauca.
+
+                    Sin autem ad adulescentiam perduxissent, dirimi tamen interdum contentione vel uxoriae condicionis
+                    vel commodi alicuius, quod idem adipisci uterque non posset. Quod si qui longius in amicitia
+                    provecti essent, tamen saepe labefactari, si in honoris contentionem incidissent; pestem enim nullam
+                    maiorem esse amicitiis quam in plerisque pecuniae cupiditatem, in optimis quibusque honoris certamen
+                    et gloriae; ex quo inimicitias maximas saepe inter amicissimos exstitisse.
+
+                    Et licet quocumque oculos flexeris feminas adfatim multas spectare cirratas, quibus, si nupsissent,
+                    per aetatem ter iam nixus poterat suppetere liberorum, ad usque taedium pedibus pavimenta tergentes
+                    iactari volucriter gyris, dum exprimunt innumera simulacra, quae finxere fabulae theatrales.
+
+                    Soleo saepe ante oculos ponere, idque libenter crebris usurpare sermonibus, omnis nostrorum
+                    imperatorum, omnis exterarum gentium potentissimorumque populorum, omnis clarissimorum regum res
+                    gestas, cum tuis nec contentionum magnitudine nec numero proeliorum nec varietate regionum nec
+                    celeritate conficiendi nec dissimilitudine bellorum posse conferri; nec vero disiunctissimas terras
+                    citius passibus cuiusquam potuisse peragrari, quam tuis non dicam cursibus, sed victoriis lustratae
+                    sunt.
+
+                    Et hanc quidem praeter oppida multa duae civitates exornant Seleucia opus Seleuci regis, et
+                    Claudiopolis quam deduxit coloniam Claudius Caesar. Isaura enim antehac nimium potens, olim subversa
+                    ut rebellatrix interneciva aegre vestigia claritudinis pristinae monstrat admodum pauca.
+
+                    Sin autem ad adulescentiam perduxissent, dirimi tamen interdum contentione vel uxoriae condicionis
+                    vel commodi alicuius, quod idem adipisci uterque non posset. Quod si qui longius in amicitia
+                    provecti essent, tamen saepe labefactari, si in honoris contentionem incidissent; pestem enim nullam
+                    maiorem esse amicitiis quam in plerisque pecuniae cupiditatem, in optimis quibusque honoris certamen
+                    et gloriae; ex quo inimicitias maximas saepe inter amicissimos exstitisse.
+
+                    Et licet quocumque oculos flexeris feminas adfatim multas spectare cirratas, quibus, si nupsissent,
+                    per aetatem ter iam nixus poterat suppetere liberorum, ad usque taedium pedibus pavimenta tergentes
+                    iactari volucriter gyris, dum exprimunt innumera simulacra, quae finxere fabulae theatrales.
+
+                    Soleo saepe ante oculos ponere, idque libenter crebris usurpare sermonibus, omnis nostrorum
+                    imperatorum, omnis exterarum gentium potentissimorumque populorum, omnis clarissimorum regum res
+                    gestas, cum tuis nec contentionum magnitudine nec numero proeliorum nec varietate regionum nec
+                    celeritate conficiendi nec dissimilitudine bellorum posse conferri; nec vero disiunctissimas terras
+                    citius passibus cuiusquam potuisse peragrari, quam tuis non dicam cursibus, sed victoriis lustratae
+                    sunt.
+
+                </p>
+            </div>
+            <div class="projet">
+
+            </div>
+            <div class="equipe">
+
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="ressources">
+            <span>Informations</span>
+            <ul>
+                <li>Contactez-nous</li>
+                <li>À propos de nous</li>
+                <li>Security</li>
+            </ul>
+        </div>
+        <div class="reseaux-sociaux">
+            <nav>
+                <a href=""> <i class="fa-brands fa-instagram"></i> Intagram</a>
+                <a href=""> <i class="fa-brands fa-x-twitter"></i> Twitter</a>
+            </nav>
         </div>
 
-        <header class="global-header">
-            <div id="header-wrapper" class="">
-                <div class="left-panel"><i class="fa-solid fa-ellipsis-vertical fa-sm" style="color: #ffffff;"></i></div>
-                <div class="middle-panel"><img src="./assets/images/Logo_site_main.png" alt=""></div>
-                <div class="right-panel"></div>
-            </div>
-        </header>
-        <main>
-            <div id="bg"></div>
-        </main>
+    </footer>
 
+    <script src="./js/intro.js"></script>
+</body>
 
-
-        <script src="./js/intro.js"></script>
-    </body>
 </html>
