--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <header class="global-header">
         <div id="header-wrapper" class="">
-            <div class="left-panel"><i class="fa-solid fa-ellipsis-vertical fa-sm" style="color: #ffffff;"></i></div>
+            <div class="left-panel"><img src="./assets/images/humbergeur_menu.png" alt="" style="height: 40px;"></div>
             <div class="middle-panel"><img src="./assets/images/Logo_site_main.png" alt=""></div>
             <div class="right-panel"></div>
         </div>
@@ -34,77 +34,21 @@
             <h1>"le début d'une nouvelle ère"</h1>
         </div>
         <div id="sections">
-            <div class="text-presentation">
-                <p>Et hanc quidem praeter oppida multa duae civitates exornant Seleucia opus Seleuci regis, et
-                    Claudiopolis quam deduxit coloniam Claudius Caesar. Isaura enim antehac nimium potens, olim subversa
-                    ut rebellatrix interneciva aegre vestigia claritudinis pristinae monstrat admodum pauca.
+            <div class="presentation-projet">
+                <div class="section-gauche">
 
-                    Sin autem ad adulescentiam perduxissent, dirimi tamen interdum contentione vel uxoriae condicionis
-                    vel commodi alicuius, quod idem adipisci uterque non posset. Quod si qui longius in amicitia
-                    provecti essent, tamen saepe labefactari, si in honoris contentionem incidissent; pestem enim nullam
-                    maiorem esse amicitiis quam in plerisque pecuniae cupiditatem, in optimis quibusque honoris certamen
-                    et gloriae; ex quo inimicitias maximas saepe inter amicissimos exstitisse.
+                </div><div class="section-droite">
+                    <h2>Notre projet</h2>
+                    <p>
+                        Nunc vero inanes flatus quorundam vile esse quicquid extra urbis pomerium nascitur aestimant
+                        praeter orbos et caelibes, nec credi potest qua obsequiorum diversitate coluntur homines sine
+                        liberis Romae.
 
-                    Et licet quocumque oculos flexeris feminas adfatim multas spectare cirratas, quibus, si nupsissent,
-                    per aetatem ter iam nixus poterat suppetere liberorum, ad usque taedium pedibus pavimenta tergentes
-                    iactari volucriter gyris, dum exprimunt innumera simulacra, quae finxere fabulae theatrales.
-
-                    Soleo saepe ante oculos ponere, idque libenter crebris usurpare sermonibus, omnis nostrorum
-                    imperatorum, omnis exterarum gentium potentissimorumque populorum, omnis clarissimorum regum res
-                    gestas, cum tuis nec contentionum magnitudine nec numero proeliorum nec varietate regionum nec
-                    celeritate conficiendi nec dissimilitudine bellorum posse conferri; nec vero disiunctissimas terras
-                    citius passibus cuiusquam potuisse peragrari, quam tuis non dicam cursibus, sed victoriis lustratae
-                    sunt.
-
-                    Et hanc quidem praeter oppida multa duae civitates exornant Seleucia opus Seleuci regis, et
-                    Claudiopolis quam deduxit coloniam Claudius Caesar. Isaura enim antehac nimium potens, olim subversa
-                    ut rebellatrix interneciva aegre vestigia claritudinis pristinae monstrat admodum pauca.
-
-                    Sin autem ad adulescentiam perduxissent, dirimi tamen interdum contentione vel uxoriae condicionis
-                    vel commodi alicuius, quod idem adipisci uterque non posset. Quod si qui longius in amicitia
-                    provecti essent, tamen saepe labefactari, si in honoris contentionem incidissent; pestem enim nullam
-                    maiorem esse amicitiis quam in plerisque pecuniae cupiditatem, in optimis quibusque honoris certamen
-                    et gloriae; ex quo inimicitias maximas saepe inter amicissimos exstitisse.
-
-                    Et licet quocumque oculos flexeris feminas adfatim multas spectare cirratas, quibus, si nupsissent,
-                    per aetatem ter iam nixus poterat suppetere liberorum, ad usque taedium pedibus pavimenta tergentes
-                    iactari volucriter gyris, dum exprimunt innumera simulacra, quae finxere fabulae theatrales.
-
-                    Soleo saepe ante oculos ponere, idque libenter crebris usurpare sermonibus, omnis nostrorum
-                    imperatorum, omnis exterarum gentium potentissimorumque populorum, omnis clarissimorum regum res
-                    gestas, cum tuis nec contentionum magnitudine nec numero proeliorum nec varietate regionum nec
-                    celeritate conficiendi nec dissimilitudine bellorum posse conferri; nec vero disiunctissimas terras
-                    citius passibus cuiusquam potuisse peragrari, quam tuis non dicam cursibus, sed victoriis lustratae
-                    sunt.
-
-                    Et hanc quidem praeter oppida multa duae civitates exornant Seleucia opus Seleuci regis, et
-                    Claudiopolis quam deduxit coloniam Claudius Caesar. Isaura enim antehac nimium potens, olim subversa
-                    ut rebellatrix interneciva aegre vestigia claritudinis pristinae monstrat admodum pauca.
-
-                    Sin autem ad adulescentiam perduxissent, dirimi tamen interdum contentione vel uxoriae condicionis
-                    vel commodi alicuius, quod idem adipisci uterque non posset. Quod si qui longius in amicitia
-                    provecti essent, tamen saepe labefactari, si in honoris contentionem incidissent; pestem enim nullam
-                    maiorem esse amicitiis quam in plerisque pecuniae cupiditatem, in optimis quibusque honoris certamen
-                    et gloriae; ex quo inimicitias maximas saepe inter amicissimos exstitisse.
-
-                    Et licet quocumque oculos flexeris feminas adfatim multas spectare cirratas, quibus, si nupsissent,
-                    per aetatem ter iam nixus poterat suppetere liberorum, ad usque taedium pedibus pavimenta tergentes
-                    iactari volucriter gyris, dum exprimunt innumera simulacra, quae finxere fabulae theatrales.
-
-                    Soleo saepe ante oculos ponere, idque libenter crebris usurpare sermonibus, omnis nostrorum
-                    imperatorum, omnis exterarum gentium potentissimorumque populorum, omnis clarissimorum regum res
-                    gestas, cum tuis nec contentionum magnitudine nec numero proeliorum nec varietate regionum nec
-                    celeritate conficiendi nec dissimilitudine bellorum posse conferri; nec vero disiunctissimas terras
-                    citius passibus cuiusquam potuisse peragrari, quam tuis non dicam cursibus, sed victoriis lustratae
-                    sunt.
-
-                </p>
-            </div>
-            <div class="projet">
-
-            </div>
-            <div class="equipe">
-
+                        Siquis enim militarium vel honoratorum aut nobilis inter suos rumore tenus esset insimulatus
+                        fovisse partes hostiles, iniecto onere catenarum in modum beluae trahebatur et inimico urgente
+                        vel nullo, quasi sufficiente hoc solo, quod nominatus esset aut delatus aut postulatus, capite
+                        vel multatione bonorum aut insulari solitudine damnabatur.</p>
+                </div>
             </div>
         </div>
     </main>
