--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
             </ul>
         </div>
         <div class="reseaux-sociaux">
-            <a href=""> <i class="fa-brands fa-instagram"></i> Intagram</a>
+            <a href="https://instagram.com/ascentaconcept?igshid=OGQ5ZDc2ODk2ZA=="> <i class="fa-brands fa-instagram"></i> Intagram</a>
             <a href=""> <i class="fa-brands fa-x-twitter"></i> Twitter</a>
+            <a href="https://www.tiktok.com/@ascenta.concept?_t=8hOLUxdzRVB&_r=1"> <i class="fa-brands fa-tiktok"></i> TikTok</a>
         </div>
 
     </footer>
