--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <header class="global-header">
         <div id="header-wrapper" class="">
-            <div class="left-panel"><img src="./assets/images/humbergeur_menu.png" alt="" style="height: 40px;"></div>
-            <div class="middle-panel"><img src="./assets/images/Logo_site_main.png" alt=""></div>
+            <div class="left-panel"><!--<img src="./assets/images/humbergeur_menu.png" alt="" style="height: 40px;">--></div>
+            <div class="middle-panel"><a href="./index.html"><img src="./assets/images/Logo_site_main.png" alt=""></a></div>
             <div class="right-panel"></div>
         </div>
     </header>
@@ -41,7 +41,10 @@
 			<div class="container">
 				<div class="row">
                     <div id="bg">
-                        <h1>"le début d'une nouvelle ère"</h1>
+                        <video autoplay muted loop>
+                            <source src="./assets/videos/production_id_4169986.mp4" type="video/mp4" />
+                        </video>
+                        <h1>"Le debut d'une nouvelle ére</h1>
                     </div>
                 </div>
             </div>
@@ -101,6 +104,7 @@
             </div>
         </section>
     </main>
+
     <footer>
         <div class="ressources">
             <span>Informations</span>
@@ -111,9 +115,18 @@
             </ul>
         </div>
         <div class="reseaux-sociaux">
-            <a href="https://instagram.com/ascentaconcept?igshid=OGQ5ZDc2ODk2ZA=="> <i class="fa-brands fa-instagram"></i> Intagram</a>
-            <a href=""> <i class="fa-brands fa-x-twitter"></i> Twitter</a>
-            <a href="https://www.tiktok.com/@ascenta.concept?_t=8hOLUxdzRVB&_r=1"> <i class="fa-brands fa-tiktok"></i> TikTok</a>
+            <div class="reseau">
+                <a href="https://instagram.com/ascentaconcept?igshid=OGQ5ZDc2ODk2ZA=="> <i class="fa-brands fa-instagram"></i> Intagram</a>
+            </div>
+            <div class="reseau">
+                <a href=""> <i class="fa-brands fa-x-twitter"></i> Twitter</a>
+            </div>
+            <div class="reseau">
+                <a href="https://www.tiktok.com/@ascenta.concept?_t=8hOLUxdzRVB&_r=1"> <i class="fa-brands fa-tiktok"></i> TikTok</a>
+            </div>
+        </div>
+        <div id="copyright">
+            <p>This web site was made by the Ascenta Concept group 2023, all right reserved.</p>
         </div>
 
     </footer>
