--- a/index.html
+++ b/index.html
@@ -112,22 +112,22 @@
 
                             <div class="membre">
                                 <h2>Nom membre</h2>
-                                <h3>Role.</h3>
+                                <h3>Role</h3>
                             </div>
 
                             <div class="membre">
                                 <h2>Nom membre</h2>
-                                <h3>Role.</h3>
+                                <h3>Role</h3>
                             </div>
 
                             <div class="membre">
                                 <h2>Nom membre</h2>
-                                <h3>Role.</h3>
+                                <h3>Role</h3>
                             </div>
 
                             <div class="membre">
                                 <h2>Nom membre</h2>
-                                <h3>Role.</h3>
+                                <h3>Role</h3>
                             </div>
                         </div>
                     </div>
