--- a/index-dev.html
+++ b/index-dev.html
@@ -187,6 +187,7 @@
             height: max-content;
             width: 100%;
             overflow: hidden;
+            margin-bottom: 100px;
         }
 
         .visuel-projet>div:first-child {
@@ -290,6 +291,27 @@
 
         .equipe-wrapper>div .effet {
             width: 100%;
+        }
+
+        /*  FOOTER    */
+        footer {
+            background: #201E1E;
+            height: 389px;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        footer>div:first-child {
+            display: flex;
+            justify-content: space-evenly;
+        }
+
+        footer>div:first-child>div {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
     </style>
 </head>
@@ -412,14 +434,60 @@
                 </div>
             </div>
         </div>
-
-
-
     </main>
 
     <footer>
+        <div>
+            <div>
+                <div><span
+                        style="color: #FF5959; font-size: 30px; font-family: Montserrat; font-weight: 900; word-wrap: break-word">I</span><span
+                        style="color: white; font-size: 30px; font-family: Montserrat; font-weight: 900; word-wrap: break-word">nformations</span>
+                </div>
+                <div style="width: 82px; height: 0px; border: 1px #FF5959 solid"></div>
 
+                <h2>À propos de nous</h2>
+                <h2>Competition F1 : participation</h2>
 
+                <div>
+                    <a href="">I</a>
+                    <a href="">T</a>
+                    <a href="">T</a>
+                </div>
+            </div>
+            <div>
+                <div><span
+                        style="color: #FF5959; font-size: 30px; font-family: Montserrat; font-weight: 900; word-wrap: break-word">C</span><span
+                        style="color: white; font-size: 30px; font-family: Montserrat; font-weight: 900; word-wrap: break-word">ontact</span>
+                </div>
+                <div style="width: 82px; height: 0px; border: 1px #FF5959 solid"></div>
+
+                <div>
+                    <div>
+                        <i>Tel</i>
+                        <p>+33 66 66 77 78</p>
+                    </div>
+                    <div>
+                        <i>Mail</i>
+                        <p>test@test.test</p>
+                    </div>
+                    <div>
+                        <i>Adr</i>
+                        <p>2 lot. de la croix lanauve,
+                            16000 Angoulême</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="mentions-legales">
+            <div
+                style="text-align: center; color: white; font-size: 17px; font-family: Montserrat; font-weight: 700; text-decoration: underline; word-wrap: break-word">
+                Mentions légales</div>
+            <div
+                style="text-align: center; color: rgba(255, 255, 255, 0.50); font-size: 12px; font-family: Montserrat; font-weight: 600; word-wrap: break-word">
+                Design par Arnaud Graciet.<br />Développement par Khaled Alkardosh.</div>
+        </div>
     </footer>
 
 
