--- a/index-dev.html
+++ b/index-dev.html
@@ -8,23 +8,25 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/620fc58eba.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-
-
-
-    <style>
-        
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <div id="intro">
+        <img src="./assets/images/Logo_site_main.png" alt="logo" id="intro-logo">
+    </div>
+
     <header class="global-header">
         <div id="header-wrapper">
             <div class="left-panel">
                 <a href="./index.html"><img src="./assets/images/Logo_site_main.png" alt="" style="height: 45px;"></a>
             </div>
             <div class="right-panel">
+                <i class="fa-solid fa-bars" style="color: #FF5959;"></i>
                 <nav>
                     <a href="#">Accueil</a>
                     <a href="#">à propos</a>
@@ -88,21 +90,17 @@
                                 <div class="effet"></div>
                             </div>
                             <p>
-                                Bienvenue chez Ascenta Concept, une écurie scolaire passionnée par l’innovation,
-                                l’éducation STEM et
-                                la compétition F1 in School. Nous vous invitons à rejoindre notre aventure éducative
-                                excitante et à
-                                devenir un partenaire clé de notre succès. <br>
+                                Bienvenue chez Ascenta Concept, une écurie scolaire passionnée par l’innovation, l’éducation STEM et la compétition F1 in School. 
+
+                                Nous vous invitons à rejoindre notre aventure éducative excitante et à devenir un partenaire clé de notre succès.
 
                                 Ascenta concept est une écurie de Formule 1 miniaturisée participante au concours F1 In
                                 School.
-                                Notre écurie est composée d'étudiants passionnées qui veulent par la suite se faire une
-                                identité
-                                ainsi qu'un réseau dans ce monde du sport automobile.
-                                c'est la base qu'a écrit mon associé pour la présentation de notre dossier sponsoring
+
+                                Notre écurie est composée d'étudiants passionnées qui veulent par la suite se faire une identité ainsi qu'un réseau dans ce monde du sport automobile.
                             </p>
 
-                            <a href="#" class="button" style="margin-top: 30px;">Découvrir l’équipe</a>
+                            <a href="#membre-equipe" class="button" style="margin-top: 30px;">Découvrir l’équipe</a>
 
                         </div>
 
@@ -143,7 +141,7 @@
                                     <div class="effet" style="width: 50%;"></div>
                                     <p>"Ascenta Concept, que la vitesse monte en flèche"</p>
                                 </div>
-                                <div class="membre">
+                                <div class="membre" id="membre-equipe">
                                     <div>
                                         <div class="membre-info">
                                             <h3><span>R</span>omain <span>G</span>rosjean</h3>
