--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                     <div class="presentation-projet">
                         <div class="section-gauche">
 
-                        </div><div class="section-droite">
+                        </div>
+                        <div class="section-droite">
                             <h2>Notre projet</h2>
                             <p>
                                 Nunc vero inanes flatus quorundam vile esse quicquid extra urbis pomerium nascitur
