--- a/index-dev.html
+++ b/index-dev.html
@@ -23,7 +23,7 @@
     <header class="global-header">
         <div id="header-wrapper">
             <div class="left-panel">
-                <a href="./index.html"><img src="./assets/images/Logo_site_main.png" alt="" style="height: 45px;"></a>
+                <a href="./index.html"><img src="./assets/images/Logo_site_main.png" alt=""></a>
             </div>
             <div class="right-panel">
                 <i class="fa-solid fa-bars" style="color: #FF5959;"></i>
@@ -144,7 +144,7 @@
                                 <div class="membre" id="membre-equipe">
                                     <div>
                                         <div class="membre-info">
-                                            <h3><span>R</span>omain <span>G</span>rosjean</h3>
+                                            <h3><span class="span-effect">R</span>omain <span class="span-effect">G</span>rosjean</h3>
                                             <p>role</p>
                                         </div>
 
@@ -152,21 +152,21 @@
                                     </div>
                                     <div>
                                         <div class="membre-info">
-                                            <h3><span>R</span>omain <span>G</span>rosjean</h3>
+                                            <h3><span class="span-effect">R</span>omain <span class="span-effect">G</span>rosjean</h3>
                                             <p>role</p>
                                         </div>
                                         <img style="border-radius: 22px" src="https://via.placeholder.com/271x219" />
                                     </div>
                                     <div>
                                         <div class="membre-info">
-                                            <h3><span>R</span>omain <span>G</span>rosjean</h3>
+                                            <h3><span class="span-effect">R</span>omain <span class="span-effect">G</span>rosjean</h3>
                                             <p>role</p>
                                         </div>
                                         <img style="border-radius: 22px" src="https://via.placeholder.com/271x219" />
                                     </div>
                                     <div>
                                         <div class="membre-info">
-                                            <h3><span>R</span>omain <span>G</span>rosjean</h3>
+                                            <h3><span class="span-effect">R</span>omain <span class="span-effect">G</span>rosjean</h3>
                                             <p>role</p>
                                         </div>
                                         <img style="border-radius: 22px" src="https://via.placeholder.com/271x219" />
